[package]
authors = ["MarkGhebrial <mghebrialjr@icloud.com>"]
edition = "2018"
readme = "README.md"
name = "opengyro"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
feather_m4 = { version = "0.11.0", features = ["unproven", "usb", "dma"] }
panic-halt = "0.2.0"
fugit = "0.3.7"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
heapless = "0.7.16"
ufmt = "0.2.0"
embedded-hal = "0.2.7"
nb = "1.1.0"
icm20948_driver = { git = "https://github.com/MarkGhebrial/icm20948_driver.git", branch = "bugfixes" }
ufmt_float = "0.2.0"
nalgebra = { version = "0.31", default-features = false }
ahrs = { version = "0.6.0", default-features = false }
pid = "4.0.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "opengyro"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
